fixed z-index of modal popup

--- a/src/components/Pages/Products/Modal/Modal.module.css
+++ b/src/components/Pages/Products/Modal/Modal.module.css
@@ -1,4 +1,6 @@
 .title {
+  position: relative;
+  z-index: 11;
   position: fixed;
   bottom: 0;
   left: 0;
